--- a/average-response-time.html
+++ b/average-response-time.html
@@ -274,22 +274,24 @@
 
         const responseTimeData2 = Array.from({ length: 120 }, (_, i) => ({
             hour: i + 1,
-            '0-50': Math.floor(Math.random() * 100),
-            '50-100': Math.floor(Math.random() * 50),
-            '100-150': Math.floor(Math.random() * 30),
-            '150-200': Math.floor(Math.random() * 20),
+            '0-50': Math.floor(Math.random() * 80),
+            '50-100': Math.floor(Math.random() * 40),
+            '100-150': Math.floor(Math.random() * 25),
+            '150-200': Math.floor(Math.random() * 15),
             '200-250': Math.floor(Math.random() * 10),
-            '250-300': Math.floor(Math.random() * 5),
-            '300-350': Math.floor(Math.random() * 3),
-            '350-400': Math.floor(Math.random() * 2),
-            '400-450': Math.floor(Math.random() * 1),
+            '250-300': Math.floor(Math.random() * 7),
+            '300-350': Math.floor(Math.random() * 5),
+            '350-400': Math.floor(Math.random() * 3),
+            '400-450': Math.floor(Math.random() * 2),
             '450-500': Math.floor(Math.random() * 1)
         }));
 
         const seriesKeys = ['0-50', '50-100', '100-150', '150-200', '200-250', '250-300', '300-350', '350-400', '400-450', '450-500'];
         const colors = ['#22c55e', '#eab308', '#a3e635', '#fde047', '#38bdf8', '#818cf8', '#f472b6', '#fca5a5', '#a3a3a3', '#d4d4d4'];
 
-        function createChart(responseTimeData) {
+        let chart;
+
+        function initChart(responseTimeData) {
             const series = seriesKeys.map((key, idx) => ({
                 name: key,
                 data: responseTimeData.map(d => d[key]),
@@ -299,7 +301,7 @@
                 marker: { enabled: false }
             }));
 
-            Highcharts.chart('response-time-chart', {
+            chart = Highcharts.chart('response-time-chart', {
                 chart: {
                     type: 'area',
                     backgroundColor: 'transparent',
@@ -348,19 +350,16 @@
             });
         }
 
-        // Set default chart on page load
-        createChart(responseTimeData1);
+        function updateChartData(responseTimeData) {
+            seriesKeys.forEach((key, idx) => {
+                if (chart.series[idx]) {
+                    chart.series[idx].setData(responseTimeData.map(d => d[key]), false);
+                }
+            });
 
-        // Tab switch event listeners
-        document.getElementById('tab-success').addEventListener('click', () => {
-            setActiveTab('tab-success');
-            createChart(responseTimeData1);
-        });
-
-        document.getElementById('tab-transactions').addEventListener('click', () => {
-            setActiveTab('tab-transactions');
-            createChart(responseTimeData2);
-        });
+            chart.xAxis[0].setCategories(responseTimeData.map(d => d.hour), false);
+            chart.redraw();
+        }
 
         function setActiveTab(id) {
             document.querySelectorAll('.tab-btn').forEach(btn => {
@@ -371,8 +370,20 @@
             tab.classList.add('active-tab', 'bg-white', 'border-gray-700');
             tab.classList.remove('bg-gray-100', 'border-transparent');
         }
-    </script>
 
+        document.getElementById('tab-success').addEventListener('click', () => {
+            setActiveTab('tab-success');
+            updateChartData(responseTimeData1);
+        });
+
+        document.getElementById('tab-transactions').addEventListener('click', () => {
+            setActiveTab('tab-transactions');
+            updateChartData(responseTimeData2);
+        });
+
+        // Initialize chart
+        initChart(responseTimeData1);
+    </script>
 
     <script src="https://kit.fontawesome.com/ce278ed6db.js" crossorigin="anonymous"></script>
     <script src="/assets/js/main.js"></script>
